--- a/.gitmodules
+++ b/.gitmodules
@@ -19,6 +19,6 @@
 [submodule "MaterialX"]
 	path = MaterialX
 	url = https://github.com/AcademySoftwareFoundation/MaterialX.git
-[submodule "openexr"]
-	path = openexr
-	url = https://github.com/mitsuba-renderer/openexr
+[submodule "Imath"]
+	path = Imath
+	url = https://github.com/AcademySoftwareFoundation/Imath.git
